--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@ develop new skills during the make interaction to achieve new heights
                 <a href="mailto:kkyogendra40@gmail.com" class="text-blue-300 hover:text-blue-500 transition-colors">Email</a>
                 <a href="tel:+919030322758" class="text-blue-300 hover:text-blue-500 transition-colors">+91 9030322758</a>
                 <a href="https://www.linkedin.com/in/kopparapu-youendra-02977a342" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-500 transition-colors">LinkedIn</a>
-                <a href="https://www.youtube.com/@ismart_channel" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-500 transition-colors">YouTube</a>
+                <a href="https://youtube.com/@ismart_channel.?si=Z1dpJrVmzy-vm7lS" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-500 transition-colors">YouTube</a>
             </div>
-            <a href="https://drive.google.com/file/d/1Q8MB5B45LVzslMOTOKdjuVk9jacGVUhE/view?usp=sharing" download class="mt-6 inline-block bg-blue-500 text-white px-6 py-3 rounded-full hover:bg-blue-700 transition-colors">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1Q8MB5B45LVzslMOTOKdjuVk9jacGVUhE/view?usp=sharing">Download Resume</a>
         </div>
     </section>
 
